tests/fixtures/invalid/pow_str_str_dict.py
# Cannot call pow() with Str, Str, Dict[str, int]
x = pow("hello", "hello", {"a": 1})
